[package]
name = "tokioPlayground"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.1"
once_cell = "1.18.0"
reqwest = {version = "0.12.4", features = ["blocking", "rustls-tls"], default-features = false}
rodio = { version = "0.18.0" , features = ["symphonia-all"]}
symphonia = "0.5.4"
stream-download = "0.5.2"
futures-util = "0.3.30"
parking_lot = "0.12.2"
serde = { version = "1.0.201", features = ["derive"] }
rand = "0.9.0-alpha.1"
bytes = "1.6.0"
ratatui = "0.26.3"
crossterm = "0.27.0"
